EditWorkItem - fix white space before Done badge when adding child task

--- a/Satori/Pages/StandUp/Components/EditWorkItem.razor.css
+++ b/Satori/Pages/StandUp/Components/EditWorkItem.razor.css
@@ -22,6 +22,10 @@
     align-items: center;
 }
 
+.badge {
+    margin-left: 5px;
+}
+
 .update-task-row {
     display: flex;
     flex-wrap: wrap;
